--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "postbuild": "node scripts/make404.cjs",
+    "preview": "vite preview --port 4173",
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -25,7 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^3.4.10",
     "vite": "^7.1.7"
   }
 }
